--- a/app/views/create-voucher.html
+++ b/app/views/create-voucher.html
@@ -95,7 +95,7 @@
         </th>
         <th></th>
       </tr>
-      <tr ng-repeat="expense in expenses">
+      <tr ng-repeat="expense in expenses | orderBy:'SlNo'">
         <td>
           {{ expense.SlNo }}
         </td>
@@ -125,9 +125,11 @@
     </div>
   </div>
   <div class="panel-footer">
-    <div class="btn-group btn-group-lg" role="group" aria-label="...">
-      <button type="button" class="btn btn-default" ng-click="save()">Save</button>
-      <button type="button" class="btn btn-default" ng-click="submit()">Submit</button>
+    <div class="btn-group" role="group" aria-label="...">
+      <button type="button" class="btn btn-default" ng-click="save()">
+        <span class="glyphicon glyphicon-floppy-save"></span> Save</button>
+      <button type="button" class="btn btn-default" ng-click="submit()">
+        <span class="glyphicon glyphicon-ok-sign"></span> Submit</button>
       <button type="button" class="btn btn-default" ng-click="cancel()">
         <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
     </div>
