--- a/app/views/query-voucher.html
+++ b/app/views/query-voucher.html
@@ -29,7 +29,7 @@
       <a class="btn btn-primary pull-right" ng-disabled="vouchers.length === 0"
            ng-click="csv.generate()" ng-href="{{ csv.link() }}"
            download="{{name}}-{{state}}-vouchers-{{startDate | date }}-to-{{endDate | date}}.csv">
-        <span class="glyphicon glyphicon-floppy-save"></span> Save Report </a>
+        <span class="glyphicon glyphicon-download"></span> Save Report </a>
     </div>
   </div>
   <br>
@@ -43,7 +43,7 @@
         <th class="bg-primary">State</th>
       </tr>
       <tr ng-repeat="voucher in vouchers">
-        <td ng-click="show(voucher)">{{voucher.Date | date}}</td>
+        <td> <a style="cursor: pointer" ng-click="show(voucher)">{{voucher.Date | date}}</a></td>
         <td>{{voucher.employeeId}}</td>
         <td>{{voucher.Approver}}</td>
         <td>{{voucher.Amount}}</td>
