--- a/app/views/create-voucher.html
+++ b/app/views/create-voucher.html
@@ -48,7 +48,7 @@
             <td>
               <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">Vr. No.</span>
-                <input type="text" class="form-control" placeholder="" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" placeholder="System Generated" aria-describedby="basic-addon1" ng-disabled="true">
               </div>
             </td>
           </tr>
